--- a/proyecto/app/views/users/_form.html.erb
+++ b/proyecto/app/views/users/_form.html.erb
@@ -19,7 +19,10 @@
     <%= f.label :password %><br>
     <%= f.text_field :password %>
   </div>
-
+  <div class="field">
+    <%= f.label :token %><br>
+    <%= f.text_field :token %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
